--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
     <h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
     <h1 style="color:white ;">Discord: SkuJin#1770</h1>
     <h1 style="color:white ;">My scripts</h1>
+    <h1 style="color:white ;">Roblox: SosikaKot</h1>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 style="color:white ;">Contact:</h1>
-<h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
-<h1 style="color:white ;">Discord: SkuJin#1770</h1>
-<h1 style="color:white ;">My scripts</h1>
-<h1 style="color:white ;">Yeah ik there nothing</h1>
-</body>
 </html>
