--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <h1 style="color:white ;">Contact:</h1>
     <h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
     <h1 style="color:white ;">Discord: SkuJin#1770</h1>
-    <h1 style="color:white ;">My scripts</h1>
     <h1 style="color:white ;">Roblox: SosikaKot</h1>
+    <h1 style="color:white ;">My scripts:</h1>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
