--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>!SkuJin</title>
+    <link rel="shortcut icon" href="/79135478.png">
     <h1 style="color:white ;">Contact:</h1>
     <h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
     <h1 style="color:white ;">Discord: SkuJin#1770</h1>
