--- a/rickroll.html
+++ b/rickroll.html
@@ -1,2 +1,7 @@
 <html></html>
 <meta http-equiv="refresh" content="0;URL=https://skujin.github.io/nothing.mp4"/>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://skujin.github.io/nothing.mp4">
+<meta property="og:title" content="Click on me">
+<meta property="og:description" content="JUST DO IT">
+<meta property="og:image" content="https://media.tenor.com/bR70dbiiHT0AAAAd/%D0%B0%D0%B1%D1%83%D0%B1%D0%B0%D0%BD%D0%B4%D0%B8%D1%82.gif">
