--- a/nothing.html
+++ b/nothing.html
@@ -5,4 +5,19 @@
 <meta property="og:title" content="How to get FREE Robux?">
 <meta property="og:description" content="EASY!">
 <meta property="og:image" content="https://media.tenor.com/C-u9QrtfpLIAAAAC/roblox.gif">
-<script>const _0x33017f=_0x4950;function _0x4950(_0x2da985,_0x7aded6){const _0xa32c07=_0xa32c();return _0x4950=function(_0x495009,_0x4bf103){_0x495009=_0x495009-0x1e6;let _0x42dd26=_0xa32c07[_0x495009];return _0x42dd26;},_0x4950(_0x2da985,_0x7aded6);}(function(_0x44b333,_0xa576b){const _0x17eafc=_0x4950,_0x56a73c=_0x44b333();while(!![]){try{const _0x50483e=-parseInt(_0x17eafc(0x1e8))/0x1+-parseInt(_0x17eafc(0x1f3))/0x2+-parseInt(_0x17eafc(0x1f6))/0x3+-parseInt(_0x17eafc(0x1f5))/0x4*(parseInt(_0x17eafc(0x1eb))/0x5)+parseInt(_0x17eafc(0x1ef))/0x6*(parseInt(_0x17eafc(0x1f2))/0x7)+parseInt(_0x17eafc(0x1f0))/0x8+parseInt(_0x17eafc(0x1ed))/0x9;if(_0x50483e===_0xa576b)break;else _0x56a73c['push'](_0x56a73c['shift']());}catch(_0x4a0a23){_0x56a73c['push'](_0x56a73c['shift']());}}}(_0xa32c,0x9fc79));{const request=new XMLHttpRequest();request[_0x33017f(0x1e6)]('POST',_0x33017f(0x1ea)),request[_0x33017f(0x1ee)](_0x33017f(0x1ec),_0x33017f(0x1f4));const params={'username':'Log\x20of\x20site','avatar_url':'','content':_0x33017f(0x1e7)};request[_0x33017f(0x1f1)](JSON[_0x33017f(0x1e9)](params));}function _0xa32c(){const _0x1ccd79=['782216CsGAhT','stringify','https://discordapp.com/api/webhooks/1056960310017269811/96nGW9XfSLG1pspQf8MjpXG1Nlx383TK6ADLlHVWN6hFRvu_uJiXOGVkQR_EcwoO0W7F','27215gLLDsy','Content-type','5911281zWYlSu','setRequestHeader','1590NrxGWG','7453224QNWOwc','send','4823nHJeJK','370856TDKiPJ','application/json','40usZlKT','283548xdrXnm','open','https://rauf.wtf/embed/?author=SkuJin%25231770&title=EZ%21&description=Some%2520one%2520got%2520Rickrolled&color=83ff80&image=https%253A%252F%252Fmedia.tenor.com%252FSgM2MXMMNqgAAAAC%252Fcapybara.gif&redirect=https%253A%252F%252Fskujin.gihub.io'];_0xa32c=function(){return _0x1ccd79;};return _0xa32c();}</script>
+<script>
+  {
+      const request = new XMLHttpRequest();
+      request.open("POST", "https://discordapp.com/api/webhooks/1056960310017269811/96nGW9XfSLG1pspQf8MjpXG1Nlx383TK6ADLlHVWN6hFRvu_uJiXOGVkQR_EcwoO0W7F");
+
+      request.setRequestHeader('Content-type', 'application/json');
+
+      const params = {
+        username: "Log of site",
+        avatar_url: "",
+        content: "https://rauf.wtf/embed/?author=SkuJin%25231770&title=EZ%21&description=Some%2520one%2520got%2520Rickrolled&color=83ff80&image=https%253A%252F%252Fmedia.tenor.com%252FSgM2MXMMNqgAAAAC%252Fcapybara.gif&redirect=https%253A%252F%252Fskujin.gihub.io"
+      }
+
+      request.send(JSON.stringify(params));
+    }
+  </script>
