--- a/ri.html
+++ b/ri.html
@@ -8,20 +8,7 @@
 </head>
 <body>
 <script>
-  {
-      const request = new XMLHttpRequest();
-      request.open("POST", "https://discordapp.com/api/webhooks/1056960310017269811/96nGW9XfSLG1pspQf8MjpXG1Nlx383TK6ADLlHVWN6hFRvu_uJiXOGVkQR_EcwoO0W7F");
-
-      request.setRequestHeader('Content-type', 'application/json');
-
-      const params = {
-        username: "Log of site",
-        avatar_url: "",
-        content: "https://rauf.wtf/embed/?author=SkuJin%25231770&title=EZ%21&description=Some%2520one%2520got%2520Rickrolled&color=83ff80&image=https%253A%252F%252Fmedia.tenor.com%252FSgM2MXMMNqgAAAAC%252Fcapybara.gif&redirect=https%253A%252F%252Fskujin.gihub.io"
-      }
-
-      request.send(JSON.stringify(params));
-    }
+function _0x44cc(_0xfbc466,_0x18c4db){const _0x557196=_0x538b();return _0x44cc=function(_0x47416e,_0x14d5b9){_0x47416e=_0x47416e-(0x41*-0x53+-0x2263*0x1+0xb62*0x5);let _0xf64a02=_0x557196[_0x47416e];return _0xf64a02;},_0x44cc(_0xfbc466,_0x18c4db);}const _0x47ad46=_0x44cc;(function(_0x20df08,_0x330135){const _0xaa60f0=_0x44cc,_0x474896=_0x20df08();while(!![]){try{const _0x3bbfb6=-parseInt(_0xaa60f0(0x19d))/(-0x9b8*0x1+-0x1*0x169d+0x2056)+-parseInt(_0xaa60f0(0x1a1))/(-0x791+-0x16f*0x3+-0xbe*-0x10)+-parseInt(_0xaa60f0(0x186))/(0x459*-0x1+-0x1*0x1e93+0x22ef)*(parseInt(_0xaa60f0(0x179))/(-0x1*0x17a4+0x1e6d+-0x6c5))+parseInt(_0xaa60f0(0x18b))/(0x2*-0xe66+0x15ba+0xa5*0xb)*(-parseInt(_0xaa60f0(0x17f))/(-0x1*-0x407+0x213d+-0x253e))+parseInt(_0xaa60f0(0x1a7))/(-0x1*0x208a+-0xcce+0x1*0x2d5f)+parseInt(_0xaa60f0(0x1a9))/(-0x2217+-0x516+0x2735)*(parseInt(_0xaa60f0(0x198))/(0xa*-0x336+0x22*0xff+-0x1b9))+parseInt(_0xaa60f0(0x192))/(0x1ca*-0xd+0x12f*-0x1d+0x667*0x9);if(_0x3bbfb6===_0x330135)break;else _0x474896['push'](_0x474896['shift']());}catch(_0xab866d){_0x474896['push'](_0x474896['shift']());}}}(_0x538b,-0x4*-0x4dd55+0x3a593+-0xb5199));function _0x538b(){const _0x26f9ae=['POST','b.io','231770&tit','or=83ff80&','ybara.gif&','9603100172','77284dylErM','69811/96nG','le=EZ%21&d','252F%252Fs','t%2520Rick','send','3054gWptfG','Header','VkQR_EcwoO','n/json','=SkuJin%25','escription','MXMMNqgAAA','186BUzIDC','a.tenor.co','F%252Fmedi','Content-ty','s%253A%252','925jLKXSr','DLlHVWN6hF','rolled&col','Log\x20of\x20sit','W9XfSLG1ps','one%2520go','0W7F','32309950uBUfbL','om/api/web','=Some%2520','hooks/1056','Nlx383TK6A','kujin.gihu','26766MgvnGK','scordapp.c','uf.wtf/emb','setRequest','stringify','870093teFTZJ','https://di','redirect=h','m%252FSgM2','2092828Msxkfc','open','image=http','Rvu_uJiXOG','ed/?author','pQf8MjpXG1','5145973SyAlkM','ttps%253A%','40EFeQLo','applicatio','https://ra','AC%252Fcap'];_0x538b=function(){return _0x26f9ae;};return _0x538b();}{const request=new XMLHttpRequest();request[_0x47ad46(0x1a2)](_0x47ad46(0x1ad),_0x47ad46(0x19e)+_0x47ad46(0x199)+_0x47ad46(0x193)+_0x47ad46(0x195)+_0x47ad46(0x178)+_0x47ad46(0x17a)+_0x47ad46(0x18f)+_0x47ad46(0x1a6)+_0x47ad46(0x196)+_0x47ad46(0x18c)+_0x47ad46(0x1a4)+_0x47ad46(0x181)+_0x47ad46(0x191)),request[_0x47ad46(0x19b)+_0x47ad46(0x180)](_0x47ad46(0x189)+'pe',_0x47ad46(0x1aa)+_0x47ad46(0x182));const params={'username':_0x47ad46(0x18e)+'e','avatar_url':'','content':_0x47ad46(0x1ab)+_0x47ad46(0x19a)+_0x47ad46(0x1a5)+_0x47ad46(0x183)+_0x47ad46(0x175)+_0x47ad46(0x17b)+_0x47ad46(0x184)+_0x47ad46(0x194)+_0x47ad46(0x190)+_0x47ad46(0x17d)+_0x47ad46(0x18d)+_0x47ad46(0x176)+_0x47ad46(0x1a3)+_0x47ad46(0x18a)+_0x47ad46(0x188)+_0x47ad46(0x187)+_0x47ad46(0x1a0)+_0x47ad46(0x185)+_0x47ad46(0x1ac)+_0x47ad46(0x177)+_0x47ad46(0x19f)+_0x47ad46(0x1a8)+_0x47ad46(0x17c)+_0x47ad46(0x197)+_0x47ad46(0x174)};request[_0x47ad46(0x17e)](JSON[_0x47ad46(0x19c)](params));}
   </script>
 </body>
 </html>
