--- a/ri.html
+++ b/ri.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="1;URL=https://skujin.github.io/nothing"/>
+<meta http-equiv="refresh" content="1;URL=https://skujin.github.io/nothing.mp4"/>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://skujin.github.io/nothing">
+<meta property="og:title" content="How to get FREE Robux?">
+<meta property="og:description" content="EASY!">
+<meta property="og:image" content="https://media.tenor.com/C-u9QrtfpLIAAAAC/roblox.gif">
 <html>
 <head>
   <meta charset="utf-8">
