--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="/79135478.png">
     <h1 style="color:white ;">Contact:</h1>
     <h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
-    <h1 style="color:white ;">Discord: 7991#2703</h1>
+    <h1 style="color:white ;">Discord: Агрессивный карбюратор2013#5917</h1>
     <h1 style="color:white ;">Roblox: SosikaKot</h1>
     <h1 style="color:white ;">My scripts:</h1>
     <link rel="stylesheet" href="style.css">
