--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1 style="color:white ;">Discord: Агрессивный карбюратор2013#5917</h1>
     <h1 style="color:white ;">Roblox: SosikaKot</h1>
     <h1 style="color:white ;">My scripts:</h1>
+    <a href="https://raw.githubusercontent.com/SkuJin/skujin.github.io/main/Cs2.torrent"> Download cs 2</a>
+    <a href="https://github.com/SkuJin/skujin.github.io/blob/main/Requirements%20for%20cs2.txt"> System requirements 2</a>    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
