--- a/c2s.html
+++ b/c2s.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <body style=»background-color: rgb(51,255,153)»>
 <a href="https://raw.githubusercontent.com/SkuJin/skujin.github.io/main/Cs2.torrent"> Download cs 2</a>
 <a href="https://github.com/SkuJin/skujin.github.io/blob/main/Requirements%20for%20cs2.txt"> System requirements 2</a>
 </head>
