--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <title>!SkuJin</title>
     <link rel="shortcut icon" href="/79135478.png">
     <h1 style="color:white ;">Contact:</h1>
-    <h1 style="color:white ;">Telegram: @NixwareOwner , @NigGarant</h1>
-    <h1 style="color:white ;">Discord: SkuJin#0654</h1>
-    <h1 style="color:white ;">Roblox: SosikaKot</h1>
-    <h1 style="color:white ;">My scripts:</h1>
-    <a href="https://raw.githubusercontent.com/SkuJin/skujin.github.io/main/Cs2.torrent"> Download cs 2</a>
-    <a href="https://github.com/SkuJin/skujin.github.io/blob/main/Requirements%20for%20cs2.txt"> System requirements 2</a>    
+    <h1 style="color:white ;">Telegram: </h1>
+    <h1 style="color:white ;">Discord: SkuJin#</h1>
+    <h1 style="color:white ;"></h1>
+    <h1 style="color:white ;">My scripts:</h1>    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
