--- a/seized.html
+++ b/seized.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт Захвачен</title>
+    <title>Site has been seized</title>
     <style>
         body {
             margin: 0;
@@ -44,6 +44,9 @@
             gap: 50px;
             margin-bottom: 20px;
         }
+        #logos a {
+            display: block;
+        }
         #logos img {
             width: 200px;
             height: auto;
@@ -64,11 +67,15 @@
     </style>
 </head>
 <body>
-    <div id="main-text">Site has been seized by levasik</div>
+    <div id="main-text">Сайт захвачен Ливасиком</div>
     <div id="logos">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Seal_of_the_Central_Intelligence_Agency.svg/200px-Seal_of_the_Central_Intelligence_Agency.svg.png" alt="ФСБ"> 
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Seal_of_the_Federal_Bureau_of_Investigation.svg/300px-Seal_of_the_Federal_Bureau_of_Investigation.svg.png" alt="ФБР">
+        <a href="https://www.cia.gov" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Seal_of_the_Central_Intelligence_Agency.svg/200px-Seal_of_the_Central_Intelligence_Agency.svg.png" alt="ЦРУ">
+        </a>
+        <a href="https://www.fbi.gov" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Seal_of_the_Federal_Bureau_of_Investigation.svg/300px-Seal_of_the_Federal_Bureau_of_Investigation.svg.png" alt="ФБИ">
+        </a>
     </div>
-	<div id="bottom-text">Piracy is a violation of the law that harms authors, developers, and other content creators. It deprives them of income and discourages the creation of new works. In the United States, piracy is strictly regulated by laws such as the Copyright Act of 1976 and the Digital Millennium Copyright Act (DMCA), which protect intellectual property and provide penalties for its infringement.</div>
+    <div id="bottom-text">Piracy is a violation of the law that harms authors, developers, and other content creators. It deprives them of income and discourages the creation of new works. In the United States, piracy is strictly regulated by laws such as the Copyright Act of 1976 and the Digital Millennium Copyright Act (DMCA), which protect intellectual property and provide penalties for its infringement.</div>
 </body>
 </html>
