--- a/seized.html
+++ b/seized.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <div id="main-text">Сайт захвачен Ливасиком</div>
+    <div id="main-text">Site has been seized by Levasik</div>
     <div id="logos">
         <a href="https://www.cia.gov" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Seal_of_the_Central_Intelligence_Agency.svg/200px-Seal_of_the_Central_Intelligence_Agency.svg.png" alt="ЦРУ">
