--- a/seized.html
+++ b/seized.html
@@ -75,6 +75,9 @@
         <a href="https://www.fbi.gov" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Seal_of_the_Federal_Bureau_of_Investigation.svg/300px-Seal_of_the_Federal_Bureau_of_Investigation.svg.png" alt="ФБИ">
         </a>
+        <a href="https://myrotvorets.center/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Myrotvorets_logo.svg/512px-Myrotvorets_logo.svg.png" alt="ЦРУ">
+        </a>
     </div>
     <div id="bottom-text">Piracy is a violation of the law that harms authors, developers, and other content creators. It deprives them of income and discourages the creation of new works. In the United States, piracy is strictly regulated by laws such as the Copyright Act of 1976 and the Digital Millennium Copyright Act (DMCA), which protect intellectual property and provide penalties for its infringement.</div>
 </body>
