--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="refresh" content="1;URL=https://skujin.github.io/seized.html"/>
 <head>
     <title>!SkuJin</title>
     <link rel="shortcut icon" href="/79135478.png">
