--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>!SkuJin</title>
     <link rel="shortcut icon" href="/79135478.png">
     <h1 style="color:white ;">Contact:</h1>
-    <h1 style="color:white ;">Telegram: https://t.me/SkeetCode </h1>
+    <h1 style="color:white ;">Telegram: </h1>
     <h1 style="color:white ;">Discord: SkuJin#</h1>
     <h1 style="color:white ;"></h1>
     <h1 style="color:white ;">My scripts:</h1>    
